--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build": "tnpm run clean && babel src -d lib",
     "clean": "rimraf lib",
     "lint": "eslint .",
-    "prepublish": "tnpm run build"
+    "prepublish": "tnpm test && tnpm run build"
   },
   "devDependencies": {
     "babel-cli": "6",
