--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "unhandled-rejection",
+  "name": "unhandled-rejection-proxy",
   "version": "1.0.0",
   "description": "A polyfill for unhandledrejection event of Promise",
   "keywords": [
